<resources>
    <string name="app_name">DeepHack</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="submit_data">Submit Data</string>
    <string name="glucose">Maximum Glucose Serum</string>
    <string name="medication">Medication Count</string>
    <string name="procedure">Procedure Count</string>
    <string name="diagnosis">Diagnosis Count</string>
    <string name="diag_1">Result of Diagnosis 1</string>
    <string name="lab_procedure">Lab Procedure Count</string>
    <string name="admission">Admission Source Id</string>
    <string name="error_input">Integer values for all fields is required.</string>
    <string name="admission_type">Admission Type</string>
    <string name="dispatch">Dispatch</string>
</resources>
